# private-search

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  article_server.py  centroids.npy  client.py  clustering.py  embedding_server.py  embeddings.npy  embeddings.py  market_prices.py  metadata.json  pir.py  requirements.txt  server.py  update.py  utils.py  wikipedia.py
.github/workflows/: ci.yml
simplepir/: Cargo.toml  README.md
simplepir-rs/: Cargo.toml  README.md
simplepir-rs/src/: lib.rs
simplepir/src/: lib.rs
src/: crypto.rs  dtypes.rs  lib.rs  utils.rs
tiptoe/: Cargo.toml  Dockerfile  OPTIMIZATIONS.md  README.md  docker-compose.yml
tiptoe-cdk/: cdk.context.json  cdk.json  package-lock.json  package.json
tiptoe-cdk/lib/: tiptoe-cdk-stack.ts
tiptoe-cdk/test/: tiptoe-cdk.test.ts
tiptoe-rs/: Cargo.toml  OPTIMIZATIONS.md  README.md
tiptoe-rs/src/: embedding.rs  network.rs  server.rs  utils.rs
tiptoe/src/: client.rs  embedding.rs  error.rs  lib.rs  network.rs  server.rs  utils.rs
tiptoe/src/python/: stocks.py
