[package]
name = "simplepir"
version = "0.1.0"
edition = "2021"
authors = ["Bhargav Annem"]
description = "An implementation of 'One Server for the Price of Two: Simple and Fast Single-Server Private Information Retrieval'"
license = "MIT"
keywords = ["pir", "privacy", "cryptography", "database"]  
readme = "README.md"

[dependencies]
rand_distr = "0.4"
rand_chacha = "0.3"

nalgebra = { workspace = true }
rand = { workspace = true }
num-bigint = { workspace = true, features = ["rand"] }
num-traits = { workspace = true }
